--- a/info.css
+++ b/info.css
@@ -14,3 +14,10 @@
     border-bottom-color: #ee6e73;
 }
 
+.brand-logo {
+    margin-left: 20px;
+}
+
+#nav-mobile {
+    margin-right: 20px;
+}
